# libgedit-tepl

./: NEWS  README.md  libgedit-tepl.doap  meson.build  meson_options.txt  tepl.doap
attic/: tepl-menu-stack-switcher.h  tepl-stack-helper.c  tepl-stack-helper.h  test-menu-stack-switcher.c
docs/: more-information.md  roadmap-done.md  roadmap.md
docs/reference/: api-breaks.xml  intro.xml  libgedit-tepl-docs.xml  libgedit-tepl-sections.txt  meson.build  tepl-docs.xml  tepl-sections.txt
docs/reference/xml/: meson.build
po/: POTFILES.in  POTFILES.skip
tepl/: meson.build  tepl-abstract-factory.c  tepl-abstract-factory.h  tepl-application-window.c  tepl-application-window.h  tepl-application.h  tepl-buffer.c  tepl-buffer.h  tepl-container-helper.c  tepl-container-helper.h  tepl-encoding-iconv-private.h  tepl-encoding-iconv.c  tepl-encoding-iconv.h  tepl-encoding.c  tepl-encoding.h  tepl-file-chooser.h  tepl-file-loader.h  tepl-file-saver.h  tepl-file.c  tepl-file.h  tepl-fold-region.h  tepl-goto-line-bar.h  tepl-gutter-renderer-folds.h  tepl-info-bar.c  tepl-info-bar.h  tepl-init.c  tepl-init.h  tepl-io-error-info-bars.c  tepl-io-error-info-bars.h  tepl-iter.h  tepl-language-chooser-dialog.h  tepl-language-chooser-widget.h  tepl-language-chooser.h  tepl-line-column-indicator.c  tepl-line-column-indicator.h  tepl-menu-shell.h  tepl-menu-stack-switcher.c  tepl-menu-stack-switcher.h  tepl-metadata-manager.h  tepl-metadata.c  (+77 more)
tests/: meson.build
tests/interactive-tests/: meson.build  test-encoding.c  test-menu-stack-switcher.c  test-panel-notebook.c  test-panel-switcher-menu.c  test-panel-switcher-notebook.c  test-stack-switcher-menu.c  test-status-menu-button.c  test-tab.c
tests/other-tests/: meson.build  test-utils-gsettings.c
tests/unit-tests/: meson.build  test-container-helper.c  test-encoding.c  test-file.c  test-panel-container.c  test-panel-item.c  test-panel-simple.c  test-stack-helper.c  test-utils.c  test-view.c
testsuite/: test-file.c
